--- a/intro.html
+++ b/intro.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css"></link>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
 	</head>
+	<body>
 	<h1>What is iKRUNC?</h1>
 	iKRUNC stands for <b>i</b>nducible <b>K</b>nockouts by <b>R</b>NA <b>U</b>tilizing <b>C</b>as9.<br>
 	It is a lentiviral based system to create cell lines that upon Doxycycline induction expresses a custom hybrid sgRNA (single-guide RNA) which together with a constitutively expressed Cas9 protein will mediate double-strand DNA cleavage of any gene of interest.<br> 
@@ -21,5 +22,6 @@
 	Of course it is important to choose a target site that is uniquely present in the genome, but considering off-target effects, it is important to realize that cleavage of targets with only a few basepairs has been consistently reported.<br>
 	To prevent such off-target effects, this website offers a <a href='sitefinder.html' target='maincontentframe'>sitefinder</a> that can help in finding the ideal sgRNA sequences for your gene of interest. <br>
 	<h1>Questions</h1>
-	In case you have any further questions, please send them to <a href='mailto:b.evers@nki.nl'>b.evers@nki.nl</a>
+	In case you have any further questions, please send them to <a href='mailto:b.evers@nki.nl'>b.evers@nki.nl</a> or leave a message on the <a href="https://groups.google.com/forum/#!forum/ikrunc" target="_blank">forum</a>
+	</body>
 </html>
