--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>Welcome!</h1>
 		Welcome on the iKRUNC website. This site aims to give more information about the inducible genome editing system iKRUNC and CRISPR/Cas9.<br>
-		If you're new ot iKRUNC, please select Introduction from the above menu.<br>
+		If you're new to iKRUNC, please select Introduction from the above menu.<br>
 		
 		<h1>News</h1>
 		<h2>25 January 2014 - Test site online</h2>
