--- a/intro.html
+++ b/intro.html
@@ -12,9 +12,9 @@
 	Specificity of the system comes from a 20nt region in the sgRNA molecule that recognizes a complementary sequence in the genome
 	<h1>Vectors</h1>
 	The system consists of two vectors (Click on vector names to download a map):<br>
-	The <a href='maps/ikrunc-cas9neo.gb'>iKRUNC-Cas9Neo</a> vector encodes the Cas9 protein and a neomycin selection cassette, making infected cells resistant to G418.<br>
+	The <a href='maps/ikrunc-cas9neo.gb' target="_blank">iKRUNC-Cas9Neo</a> vector encodes the Cas9 protein and a neomycin selection cassette, making infected cells resistant to G418.<br>
 	<img src='img/Cas9Neo.png' width='50%'></img><br>
-	<a href='maps/ikrunc-bsd.gb'>iKRUNC-sgRNA-BSD</a>/<a href='maps/ikrunc-puro.gb'>iKRUNC-sgRNA-Puro</a> vectors contain a doxycycline inducible H1 promoter driving any sgRNA of interest. The tet repressor and antibiotic selection markers (vectors are available with Blasticidin or Puromycin resistance genes) are expressed from the same construct<br>
+	<a href='maps/ikrunc-bsd.gb' target="_blank">iKRUNC-sgRNA-BSD</a>/<a href='maps/ikrunc-puro.gb' target="_blank">iKRUNC-sgRNA-Puro</a> vectors contain a doxycycline inducible H1 promoter driving any sgRNA of interest. The tet repressor and antibiotic selection markers (vectors are available with Blasticidin or Puromycin resistance genes) are expressed from the same construct<br>
 	<img src='img/ikrunc_bsd.png' width='68%'></img><br>
 	<h1>Cloning</h1>
 	To create a custom iKRUNC vector that inducibly cuts the genome of the host cell at any given location, a 20nt fragment containing the target site should be cloned into iKRUNC-sgRNA-BSD or iKRUNC-sgRNA-Puro (see protocols for further details). 
